# multiRobotPlanner

./: .gitignore  README.md  TODO.md
Finegrained/: README.md  goToGoalMILP.m  goToGoalSMT.m  goToGoalSMT.mat  goToGoalSMT.py  plotGoToGoalSMT.m  visitStationMILP.m  visitStationSMT.py
GUI/: README.md  config.myviz  hello.py  rvizG.py
GUI/ws/src/dingo_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
GUI/ws/src/dingo_viz/launch/: view_diagnostics.launch
Metric/: README.md  locations.py  map.py  modularMulti.py  multiRobotCoupledVisit.py  multiRobotSeqNoUtils.py  multiRobotSeqUtils.py  multiRobotVisit.py  saver.py  scratch.py  scratchAnim.py  scratchNP.py  singleRobotFlexibleVisitDeadline.py  singleRobotSeqAdjacent.py  singleRobotSeqUtils.py  singleRobotSequence.py  twoRobotSeqUtils.py
Operations/catkin_ws/src/schedule_monitor/: CMakeLists.txt  package.xml
Operations/catkin_ws/src/schedule_monitor/scripts/: evolvingScheduleViz.py  savedSched.csv  scheduleMonitor.py  scheduleMonitorTester.py  test.csv  ticketPublisherTester.py  tickets.py  visualizeSchedMon.py
Operations/catkin_ws/src/schedule_monitor/scripts/constants/: jobs.py  stations.py  test_jobs.py
Operations/catkin_ws/src/schedule_monitor/scripts/testing/: tickets.py
Operations/catkin_ws/src/schedule_monitor/scripts/utils/: display_utils.py  draw_utils.py  funcs.py  job_utils.py  sched_utils.py  solver_utils.py  solver_utils_cpsat.py  solver_utils_lp.py
Operations/catkin_ws/src/trajectory_planner/: CMakeLists.txt  package.xml
Operations/catkin_ws/src/trajectory_planner/scripts/: map.py  trajectoryPlanner.py  trajectoryPlannerTester.py
Operations/catkin_ws/src/trajectory_planner/scripts/constants/: jobs.py  locations.py  stations.py
Operations/catkin_ws/src/trajectory_planner/scripts/utils/: display_utils.py  draw_utils.py  job_utils.py  map_utils.py  solver_utils.py
Operations/catkin_ws/src/trajectory_planner_msgs/: CMakeLists.txt  package.xml
Operations/catkin_ws/src/trajectory_planner_msgs/msg/: Desired_Locations.msg
workspace/src/arm_msgs/: CMakeLists.txt
workspace/src/arm_msgs/msg/: TicketMotionParams.msg
workspace/src/arm_msgs/srv/: FleetInformation.srv  MachineStatus.srv  MachinesOverview.srv  RobotAssignments.srv  RobotReplacement.srv  Schedule.srv  TicketList.srv  TicketLog.srv  UnboundMachines.srv
workspace/src/ticket_manager/: CMakeLists.txt  setup.py
workspace/src/ticket_manager/log/: log.txt
workspace/src/ticket_manager/nodes/: ticket_manager_node
workspace/src/ticket_manager/src/ticket_manager/: ticket_manager.py
workspace/src/ticket_manager/testing/: add_tickets.py  delete_tickets.py  request_ticket_log.py  start_ticket.py  ticket_manager_tester_node
ws/src/arm_gui/: CMakeLists.txt  package.xml  setup.py
ws/src/arm_gui/config/: gui_params.yaml
ws/src/arm_gui/launch/: both_guis.launch  both_guis_with_sim.launch  highbay_sim.launch  operator_gui.launch  spawn_dingos.launch  supervisor_gui.launch  test.launch  world_sim.launch  world_sim_multi_robot.launch  world_sim_one_robot.launch
ws/src/arm_gui/nodes/: operator_gui_node  operator_gui_node.py  supervisor_gui_node  supervisor_gui_node.py
ws/src/arm_gui/rviz/: highbay.rviz  multi_dingo.rviz  world.rviz  world_multi_robot.rviz  world_one_robot.rviz
ws/src/arm_gui/src/gui_common/: CPSATScheduleD.csv  buttons.py  dialogs.py  gui_elements.py
ws/src/arm_gui/src/operator_gui/: operator_gui.py
ws/src/arm_gui/src/supervisor_gui/: supervisor_gui.py
ws/src/ticket_manager/: CMakeLists.txt  package.xml
ws/src/ticket_manager/nodes/: ticket_manager_node
ws/src/ticket_manager/src/ticket_manager/: ticket_manager.py
ws/src/ticket_manager/testing/: add_tickets.py  delete_job.py  delete_tickets.py  end_ticket.py  start_ticket.py  ticket_manager_tester_node
(+362 files in other folders)
