<?xml version="1.0"?>
<package format="2">
  <name>trajectory_planner</name>
  <version>0.0.0</version>
  <description>The trajectory_planner package</description>

  <maintainer email="mekahertz@todo.todo">mekahertz</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
